--- a/personajes/serpiente_negra.html
+++ b/personajes/serpiente_negra.html
@@ -11,14 +11,28 @@
 </head>
 <body>
 <h1> Serpiente Negra </h1>
+<img src="../img/serpiente_negra.jpg" >
 </hr>
-<p> la manifestacion fisica de la oscuridad </p>
+<p>La serpiente negra es la manifestacion fisica de la oscuridad, en el big-bang la oscuridad descubrio sus propios limites y tomo conciencia de si misma. 
+  <br>El unico deseo de la serpiente es volver aser todo lo que existe y olvidarse de su conciencia. </p>
+  <p>La luz del big-bang no solo hizo que la serpiente tomara forma, tambien la dejo ciega y la obligo a retirarse a los confines de el universo por miles de años.<br> 
+    despues de varios milenios la serpiente comenzo a destruir la luz en el universo pero fue entonces que se encontro con los 3 angeles.
+  </p>
+  <p>La serpiente se efrento a los angeles con todo su poder pero se vio en desventaja, los angeles se dieron cuenta de que era imposible destruir del todo a la oscuridad asi que la encerraron en una prision llamada Kasedrim </p>
+  <p>Mientras estuvo encerrada la serpiente ideo un plan para escapar  mientras los 2 angeles luchaban en el flujo de el tiempo contra su hermano caido </p>
+  <p> paso 1: aparecer frente al un poderoso primigenio y darle la daga </p>
+  <p> paso 2: la daga absorbe almas de demonios y se vuelve lo suficientemente poderosa como para liberar una pequeña parte de la serpiente temporalmente </p>
 
 
-
-<h3>Nombre original</h3>
-desconocido
+<h3>Nombres</h3>
+serpiente negra, la gran serpiente, el oscuro, la sombra.
 <h3>raza</h3>
-desconocido
+desconocido<br>
+<img src="../img/serpiente_negra_gallery_1.jpg" >
+<img src="../img/serpiente_negra_gallery_2.jpg" >
+<img src="../img/serpiente_negra_gallery_3.jpg" >
+<img src="../img/serpiente_negra_gallery_4.jpg" >
+<img src="../img/serpiente_negra_gallery_5.jpg" >
+
 </body>   
 </html>
