--- a/especies/angeles.html
+++ b/especies/angeles.html
@@ -3,24 +3,19 @@
 <head>
   <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
-  <title> nombre de el personaje </title>
+  <title> Angeles </title>
   <!-- <link rel="stylesheet" href="css/style.css"> -->
   <style>
     body{ font-family: "proxima-nova",sans-serif; }
   </style>
 </head>
 <body>
-<h1> nombre de el personaje  </h1>
+<h1> Angeles  </h1>
 <img src="../img/" >
 </hr>
-<p>  </p>
-
-
-
-<h3>Nombres</h3>
-<h3>raza</h3>
-
-
-
+<p>los angeles fueron las primera criaturas creadas por el big-bang,son entes de poder y de luz absoluta.</p>
+<p>solo existieron 3 angeles, no solo podian cambiar su apariencia sino que podian pasar de medir un par de metros a ser mas grandes que un sistema solar </p>
+<h3>su mision</h3>
+<p>en cuanto aparecieron en el universo los angeles entendieron que su mision en la vida era ayudar a crear vida en el universo y ayudar a las especies existentes a sobrevivir.</p>
 </body>   
 </html>
