--- a/especies/primigenios.html
+++ b/especies/primigenios.html
@@ -3,24 +3,47 @@
 <head>
   <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
-  <title> nombre de el personaje </title>
+  <title> Raza primigenia </title>
   <!-- <link rel="stylesheet" href="css/style.css"> -->
   <style>
     body{ font-family: "proxima-nova",sans-serif; }
   </style>
 </head>
 <body>
-<h1> nombre de el personaje  </h1>
+<h1> Raza primigenia </h1>
 <img src="../img/" >
 </hr>
-<p>  </p>
+<p> la raza primigenia fue la primera raza de criaturas mortales, con la ayuda de los angeles se volvieron la raza de mortales mas poderosa que halla existido.</p>
 
 
 
-<h3>Nombres</h3>
-<h3>raza</h3>
+<h3>caracteristicas</h3>
+<p> los primigenios son criaturas que pueden absorber distintas clases de poder, por este motivo se sienten atraidos hacia criaturas poderosas, simplemente estar cerca de una criatura poderosa los vuelve mas poderosos. </p>
+<h3> sirvientes de los angeles</h3>
+<p> mientras vivian con los angeles los primigenios absorbian su luz lo que los volvia semi-dioses, como angeles en miniatura.</p>
+<h3> el ejercito de demonios </h3>
+<p> los primigenios que seguian al primer angel se vieron afectados por su metamorfosis, y al abosrber su energia se volvieron poderoso demonios mayores. El mas poderoso de ellos era el heredero de el primer angel, el cual fue torturado por el primer angel, obligado a absorver tanto poder oscuro como su cuerpo resistiera.</p>
+<h3> despues de los angeles </h3>
+<p> cuando los angeles murieron los primigenios se quedaron sin su principal fuente de energia y entraron en</p>
+<p> en su desesperacion los primigenios recurieton a serivir a distintos demonios mayores, remanentes de el ejercito de el rpimer angel que se hacian pasar por dioses </p>
+<h3>el heraldo primigenio de la serpiente </h3>
+<p> despues de siglos siendo esclavizados por los falsos dioses un primigenio se levanto sobre el resto, y blandiendo una daga magica comenzo a matar demonios superiores. y conenzo una revolucion, el heraldo de la serpiente negra convencio a sus seguidores de que si tenian que adorar a alguna criatura tenia que ser a la criatura mas poderosa que el universo halla visto, la serpiente negra.</p>
+<p> el heraldo de la serpiente negra creo un culto que adoraba a la serpiente cuyo unico proposito era liberarla de su prision.</p>
+<p> pero no todos los primogenios estaban a favor de liberar a la serpiente asi que hubo una gran guerra civil, una nueva rama de los primogenios esta convencida de que la magia deberia ser su fuente de poder liderada por el antiguo echizero primogenio se enfrenta a el heraldo usando poderosos ehchizos.</p>
 
+<h3> las ramas </h3>
 
+<p> despues de la guerra civil la raza de primigenios quedo fragmentada y dividida, varias ramas luchaban por el liderasgo pero ninguna lograba unificar a la especie.</p>
 
+<h4> el culto de la serpiente</h4>
+<p> la serpiente negra les proporciono poder a estos primigenios pero tambien los maldijo, el culto de la serpiente se volvio un conjunto de seres similares a zombies con una mente de colmena con el unico proposito de servir a la gran serpiente.</p>
+<h4> primigenios demoniacos </h4>
+<p> una parte de los primogenios decidio volver a adorar demonios despues de que la serpiente dejo de darles poder, conel tiempo estas criaturas se corrompieron convirtiendose en demonios menores.</p>
+<h4> primigenios puros </h4>
+<p> esta faccion decidio volver a sus raices deja de absorber poder en su totalidad y volverse mortales otra vez. lamentablemente esta rama se extigue despues de un tiempo por que sus cuerpos estaban demasiados acostumbrados al poder.</p>
+<h4> seguidores de la magia </h4>
+<p> despues de la guerra civil con la victoria de el echizero la mayoria de los primigenios adoptaron la magia como fuente de poder principal. eventualmente esta rama evoulucionaria en la especie de nix.</p>
+<h4> depredadores </h4>
+<p> esta rama usa su propio poder y todo el que pueden conseguir, son algunos de la segunda rama que siguieron el ejemplo de el heraldo primigenio de la serpiente y empezaron a cazar cosas para quedarse con su poder. eventualmente se convierten en la raza de depredadores, una de las razas mas poderosas de la era de los dioses.</p>
 </body>   
 </html>
