--- a/index - copia.html
+++ b/index - copia.html
@@ -8,8 +8,15 @@
     body{ font-family: "proxima-nova",sans-serif; }
   </style>
 </head>
-<body>
-  <!-- ------------------------------------------------ -->
+<h3>lucha contra la serpiente negra</h3>
+<p> en la lucha contra la serpiente negra el primer angel junto con sus hermanos unieron fuerzas para derrotarla y encerrarla. Antes de ser arrastrada hacia la prision la serpiente mordio al primer angel para infectarlo y asi poner en marcha su plan para borrar el universo.</p>
+<h3> la infeccion </h3>
+<p> despues de derrotar a la serpiente los angeles se separaron para reparar todo el daño que esta hizo, pero el primer angel podia sentir la oscuridad crecer en su interior. No paso mucho tiempo para que el veneno de la serpiente corrompiera completamente a el primer angel, su forma fisica cambio completamente y parecia mas un demonio que un angel.<br>
+en ese momento el  primer angel comenzo a pensar que ahora que la serpiente no existia el era la criatura mas poderosa de el universo, asi que tenia que destruir a los unicos 2 seres que podian llegar a ser una amenaza para el. El primer angel viajo por todo el universo corrompiendo seres primigenios y convirtiendolos en poderosos demonios, y nombro a el mas poderoso de estos demonios como general de su ejercito.</p>
+<h3> la guerra de los angeles </h3>
+<p> el ejercito de demonios ataco sin previo aviso, el segundo angel se vio abrumado. Aun con su inmenso poder los enemigos eran demasiados y el primer angel los lideraba.<br>
+Cuando todo parecia perdido llego el tercer angel y entre ambos pudieron dar mejor pelea.</p>
+<p>si bien los angeles dieron batalla no pudieron hacer frente al gran ejerctio, y el segundo angel perdio su forma fisica, todo parecia perdido hasta que el heredero de el primer angel traiciono a su amo y le quito tambien su forma fisica.</p>
   <!-- -------------- personajes ---------------------- -->
   <!-- ------------------------------------------------ -->
   <h2>Personajes</h2>
