--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
   <ul>
     <li><a href="items/prision_kasedrim.html">  prision kasedrim </a></li>
     <li><a href="items/ldaga_tinieblas.html">  la daga de las tinieblas </a></li>
+    <li><a href="items/prision_kasedrim.html">  el corazon dorado </a></li>
+    <li><a href="items/prision_kasedrim.html">  la mente de plata </a></li>
 
   </ul>
         <!-- ------------------------------------------------ -->
