--- a/personajes/serpiente_negra.html
+++ b/personajes/serpiente_negra.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
   <title>Serpiente Negra</title>
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
+<link rel="stylesheet" href="../style.css">
   <style>
     body{ font-family: "proxima-nova",sans-serif; }
   </style>
