--- a/personajes/leon_arena.html
+++ b/personajes/leon_arena.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
   <title> Leon de arena </title>
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="stylesheet" href="../style.css">
   <style>
     body{ font-family: "proxima-nova",sans-serif; }
   </style>
@@ -13,13 +13,11 @@
 <h1> Leon de Arena </h1>
 <img src="../img/leon_arena.jpg" >
 </hr>
-<p> una criatura creada de la misma arena del tiempo, su trabajo es proteger el fluo del tiempo. </p>
-
-
-
-<h3>Nombres</h3>
-<h3>raza</h3>
-
+<p> el leon de el tiempo es criatura celestial creada por los angeles, su trabajo es proteger el flujo del tiempo y evitar que los mortales cambien la historia. </p>
+<h3> batalla contra la serpiente negra </h3>
+<p> durante la batalla contra la serpiente negra el leon de el tiempo ayudo a sus amos a capturarla.</p>
+<h3> despues de los angeles </h3>
+<p>cuando los angeles dejaron de existir el leon tomo como tarea proteger la prision de kasedrim, eventualmente varios seres primigenios encontraron su camino hacia mortis atraidos por el poder de el leon, el leon de el tiempo les permitio quedarse con el y eventualmentese convirtieron en monjes del tiempo al servicio de el leon. </p>
 <img src="../img/leon_arena_gallery_1.jpg" >
 <img src="../img/leon_arena_gallery_2.jpg" >
 </body>   
