--- a/especies/primigenios.html
+++ b/especies/primigenios.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1> Raza primigenia </h1>
-<img src="../img/" >
+<img src="../img/9db65e188f238d76f67d2de2186b09c3.jpg" >
 </hr>
 <p> la raza primigenia fue la primera raza de criaturas mortales, con la ayuda de los angeles se volvieron la raza de mortales mas poderosa que halla existido.</p>
 
