--- a/especies/primigenios.html
+++ b/especies/primigenios.html
@@ -12,6 +12,7 @@
 <body>
 <h1> Raza primigenia </h1>
 <img src="../img/9db65e188f238d76f67d2de2186b09c3.jpg" >
+dbddc7d6dd0e9b7a814fce3494592893.jpg
 </hr>
 <p> la raza primigenia fue la primera raza de criaturas mortales, con la ayuda de los angeles se volvieron la raza de mortales mas poderosa que halla existido.</p>
 
