--- a/especies/angeles.html
+++ b/especies/angeles.html
@@ -2,7 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
- <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
+ <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos --> 
+ <link rel="stylesheet" href="../style.css">
+
   <title> Angeles </title>
   <!-- <link rel="stylesheet" href="css/style.css"> -->
   <style>
