--- a/especies/primigenios.html
+++ b/especies/primigenios.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
+ <link rel="stylesheet" href="../style.css">
+
   <title> Raza primigenia </title>
   <!-- <link rel="stylesheet" href="css/style.css"> -->
   <style>
@@ -11,8 +13,8 @@
 </head>
 <body>
 <h1> Raza primigenia </h1>
-<img src="../img/9db65e188f238d76f67d2de2186b09c3.jpg" >
-dbddc7d6dd0e9b7a814fce3494592893.jpg
+<img src="../img/primigenios.jpg" >
+
 </hr>
 <p> la raza primigenia fue la primera raza de criaturas mortales, con la ayuda de los angeles se volvieron la raza de mortales mas poderosa que halla existido.</p>
 
@@ -20,8 +22,11 @@ dbddc7d6dd0e9b7a814fce3494592893.jpg
 
 <h3>caracteristicas</h3>
 <p> los primigenios son criaturas que pueden absorber distintas clases de poder, por este motivo se sienten atraidos hacia criaturas poderosas, simplemente estar cerca de una criatura poderosa los vuelve mas poderosos. </p>
+
 <h3> sirvientes de los angeles</h3>
 <p> mientras vivian con los angeles los primigenios absorbian su luz lo que los volvia semi-dioses, como angeles en miniatura.</p>
+<img src="../img/primigenios_gallery_1.jpg" >
+
 <h3> el ejercito de demonios </h3>
 <p> los primigenios que seguian al primer angel se vieron afectados por su metamorfosis, y al abosrber su energia se volvieron poderoso demonios mayores. El mas poderoso de ellos era el heredero de el primer angel, el cual fue torturado por el primer angel, obligado a absorver tanto poder oscuro como su cuerpo resistiera.</p>
 <h3> despues de los angeles </h3>
@@ -46,5 +51,6 @@ dbddc7d6dd0e9b7a814fce3494592893.jpg
 <p> despues de la guerra civil con la victoria de el echizero la mayoria de los primigenios adoptaron la magia como fuente de poder principal. eventualmente esta rama evoulucionaria en la especie de nix.</p>
 <h4> depredadores </h4>
 <p> esta rama usa su propio poder y todo el que pueden conseguir, son algunos de la segunda rama que siguieron el ejemplo de el heraldo primigenio de la serpiente y empezaron a cazar cosas para quedarse con su poder. eventualmente se convierten en la raza de depredadores, una de las razas mas poderosas de la era de los dioses.</p>
+<img src="../img/depredadores.jpg" >
 </body>   
 </html>
