--- a/index2 - copia.html
+++ b/index2 - copia.html
@@ -37,7 +37,7 @@
     table-layout: fixed;
     z-index: 2;
     transition: width .3s cubic-bezier(.2,.3,.25,.9) 0s;
-    /* padding: 15px; */
+    padding: 15px;
 
 
 
@@ -54,7 +54,7 @@
        padding: 30px;padding: 8px;
     margin-bottom: 5px;
         }
-        sidebar #sidebar_options li:hover{ background-color: #24252d;color: white;}
+        sidebar li:hover{ background-color: #24252d;color: white;}
         i{    margin-right: 15px; width: 21px;
     text-align: center;}
   </style>
@@ -62,9 +62,7 @@
 <body> 
   <container>
   <sidebar >
-    <ul style="    background-color: black;">   <a href="linea_de_tiempo.html"><li style="    padding: 15px;
-      padding-left: 22px;"><i class="fas fa-home"></i>    Inicio </li></a></ul>
-    <ul id="sidebar_options" style=" padding: 15px;" >
+    <ul>
       <a href="linea_de_tiempo.html"><li><i class="fas fa-sitemap"></i>    linea de tiempo </li></a>
       <a href="personajes.html"><li><i class="fas fa-user"></i>  personajes </li></a>
       <a href="especies.html" ><li > <i class="fas fa-address-book"></i> especies </li></a>
@@ -72,7 +70,7 @@
       <a href="items.html" ><li ><i class="fas fa-cube"></i>  items </li></a>
       <a href="hechizos.html" ><li > <i class="fas fa-magic"></i>  hechizos </li></a>
       <a href="leyendas.html" ><li > <i class="fas fa-atlas"></i>leyendas </li></a>
-    </ul  >
+    </ul>
     
     
 
