--- a/linea_de_tiempo.html
+++ b/linea_de_tiempo.html
@@ -94,6 +94,7 @@
   <sidebar >
  
     <ul>
+      <a href="index2.html"><li><i class="fas fa-home"></i>  Inicio </li></a>
       <a href="linea_de_tiempo.html"><li style="background-color: #335faf;color: white;"><i class="fas fa-sitemap" ></i>    linea de tiempo </li></a>
       <a href="personajes.html"><li><i class="fas fa-user"></i>  personajes </li></a>
       <a href="especies.html" ><li > <i class="fas fa-address-book"></i> especies </li></a>
