--- a/linea_de_tiempo.html
+++ b/linea_de_tiempo.html
@@ -46,10 +46,16 @@
   </mobile_navbar>
   <mobile_sidebar id="mobile_sidebar"> 
 
-    <ul id="mobile_sidebar_top_home" style="    background-color: #14151d;">   <a href="index.html"><li style="    padding: 15px;
-      padding-left: 22px;"><i class="fas fa-home"></i>    <sidebar_link_title class="sidebar_link_title"> inicio </sidebar_link_title>  </li></a></ul>
-    <ul id="sidebar_options" style=" padding: 15px;" >
-      <a href="linea_de_tiempo.html"><li ><i class="fas fa-sitemap"></i>  <sidebar_link_title class="sidebar_link_title"> linea de tiempo</sidebar_link_title>  </li></a>
+    <ul id="mobile_sidebar_top_home" style="    background-color: #14151d;">   <a href="index.html"><li style="
+      padding: 15px;
+      padding-left: 23px;height: 30px;
+      padding-bottom: 5px;
+      "><i class="fas fa-home"></i>    <sidebar_link_title class="sidebar_link_title" style="opacity: 0;"> inicio </sidebar_link_title>  </li></a></ul>
+    <ul id="sidebar_options" style=" padding: 15px; padding-top: 0;" >
+      <a href="linea_de_tiempo.html"><li  style="
+        background-color: #335faf;
+        color: white;
+    "><i class="fas fa-sitemap"></i>  <sidebar_link_title class="sidebar_link_title"> linea de tiempo</sidebar_link_title>  </li></a>
       <a href="personajes.html"><li><i class="fas fa-user"></i>  <sidebar_link_title class="sidebar_link_title"> personajes </sidebar_link_title> </li></a>
       <a href="especies.html" ><li > <i class="fas fa-address-book"></i><sidebar_link_title class="sidebar_link_title"> especie </sidebar_link_title>  </li> </a>
       <a href="mundos.html" ><li ><i class="fas fa-globe-americas"></i> <sidebar_link_title class="sidebar_link_title"> mundos </sidebar_link_title>  </li></a>
