--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body> 
 <a href="v1_html_puro/index.html" > HTML puro  </a>
 <a href="v2_ajax/index.html" > ajax  </a>
+<a href="v3_load_jquery/index.html" > .load jquey  </a>
 </body>   
 
 
