--- a/v1_html_puro/personajes/el_ave.html
+++ b/v1_html_puro/personajes/el_ave.html
@@ -63,9 +63,9 @@
    
     <contenido> 
 
-      <h1> heraldo primogenio de la serpiente negra </h1>
+      <h1> El Ave </h1>
       </hr>
-      <p> texto de el heraldo primogenio de la serpiente negra  </p>
+      <p> texto de el ave </p>
 
       </contenido>
 
