--- a/v1_html_puro/personajes/madre_nix.html
+++ b/v1_html_puro/personajes/madre_nix.html
@@ -63,9 +63,9 @@
    
     <contenido> 
 
-      <h1> heraldo primogenio de la serpiente negra </h1>
+      <h1> madre nix </h1>
       </hr>
-      <p> texto de el heraldo primogenio de la serpiente negra  </p>
+      <p> texto de la madre de nix  </p>
 
       </contenido>
 
