--- a/v1_html_puro/especies/el_cocodrilo.html
+++ b/v1_html_puro/especies/el_cocodrilo.html
@@ -63,9 +63,9 @@
    
     <contenido> 
 
-      <h1> heraldo primogenio de la serpiente negra </h1>
+      <h1> el cocodrilo  </h1>
       </hr>
-      <p> texto de el heraldo primogenio de la serpiente negra  </p>
+      <p> texto de el cocodrilo  </p>
 
       </contenido>
 
