--- a/v1_html_puro/personajes/leon_arena.html
+++ b/v1_html_puro/personajes/leon_arena.html
@@ -2,23 +2,97 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
- <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
-  <title> Leon de arena </title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"><!-- hacer que el ancho se adapte a dispositivos -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>    <!-- --- Jquery --- --> 
+  <title></title>
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="personajes_style.css"> 
+  <link rel="stylesheet" href="../sidebar.css"> 
+  <link rel="stylesheet" href="personajes_style.css"> 
   <style>
-    body{ font-family: "proxima-nova",sans-serif; }
+
   </style>
 </head>
-<body>
-<h1> Leon de Arena </h1>
-<img src="../img/leon_arena.jpg" >
-</hr>
-<p> el leon de el tiempo es criatura celestial creada por los angeles, su trabajo es proteger el flujo del tiempo y evitar que los mortales cambien la historia. </p>
-<h3> batalla contra la serpiente negra </h3>
-<p> durante la batalla contra la serpiente negra el leon de el tiempo ayudo a sus amos a capturarla.</p>
-<h3> despues de los angeles </h3>
-<p>cuando los angeles dejaron de existir el leon tomo como tarea proteger la prision de kasedrim, eventualmente varios seres primigenios encontraron su camino hacia mortis atraidos por el poder de el leon, el leon de el tiempo les permitio quedarse con el y eventualmentese convirtieron en monjes del tiempo al servicio de el leon. </p>
-<img src="../img/leon_arena_gallery_1.jpg" >
-<img src="../img/leon_arena_gallery_2.jpg" >
+<body> 
+  <mobile_navbar  > 
+  
+    <i   id="open_mobile_nav" onclick="openmobileNav()" class="fas fa-bars"></i>
+    <i  style="display: none;" id="close_mobile_nav" onclick="closemobileNav()" class="fas fa-times"></i>
+  </mobile_navbar>
+  <mobile_sidebar id="mobile_sidebar"> 
+
+    <ul id="mobile_sidebar_top_home" style="    background-color: #14151d;">   <a href="index.html"><li style="
+      padding: 15px;
+      padding-left: 23px;height: 30px;
+      padding-bottom: 5px;
+      "><i class="fas fa-home"></i>    <sidebar_link_title class="sidebar_link_title" style="opacity: 0;"> inicio </sidebar_link_title>  </li></a></ul>
+    <ul id="sidebar_options" style=" padding: 15px; padding-top: 0;" >
+      <a href="../linea_de_tiempo.html"><li ><i class="fas fa-sitemap"></i>  <sidebar_link_title class="sidebar_link_title"> linea de tiempo</sidebar_link_title>  </li></a>
+      <a href="../personajes.html" style="background-color: #335faf;display: block;color: white;" ><li><i class="fas fa-user"></i>  <sidebar_link_title class="sidebar_link_title"> personajes </sidebar_link_title> </li></a>
+      <a href="../especies.html" ><li > <i class="fas fa-address-book"></i><sidebar_link_title class="sidebar_link_title"> especie </sidebar_link_title>  </li> </a>
+      <a href="../mundos.html" ><li ><i class="fas fa-globe-americas"></i> <sidebar_link_title class="sidebar_link_title"> mundos </sidebar_link_title>  </li></a>
+      <a href="../items.html" ><li ><i class="fas fa-cube"></i> <sidebar_link_title class="sidebar_link_title"> items </sidebar_link_title>  </li></a>
+      <a href="../hechizos.html" ><li > <i class="fas fa-magic"></i> <sidebar_link_title class="sidebar_link_title"> hechizos </sidebar_link_title>  </li></a>
+      <a href="../leyendas.html" ><li > <i class="fas fa-atlas"></i> <sidebar_link_title class="sidebar_link_title"> leyendas </sidebar_link_title>  </li></a>
+    </ul>
+  </mobile_sidebar>
+  <sidebar  id="sidebar">
+    <ul id="sidebar_top_home"  style="    background-color: black;">   <a href="../sidebar_menu_collapsible.html"><li style="    padding: 15px;
+      padding-left: 22px;"><i class="fas fa-home"></i>    <sidebar_link_title class="sidebar_link_title"> inicio </sidebar_link_title>  </li></a></ul>
+    <ul id="sidebar_options" style=" padding: 15px;" >
+      <a href="../linea_de_tiempo.html"><li ><i class="fas fa-sitemap"></i>  <sidebar_link_title class="sidebar_link_title"> linea de tiempo</sidebar_link_title>  </li></a>
+      <a href="../personajes.html" style="background-color: #335faf;display: block;color: white;"><li><i class="fas fa-user"></i>  <sidebar_link_title class="sidebar_link_title"> personajes </sidebar_link_title> </li></a>
+      <a href="../especies.html" ><li > <i class="fas fa-address-book"></i><sidebar_link_title class="sidebar_link_title"> especie </sidebar_link_title>  </li> </a>
+      <a href="../mundos.html" ><li ><i class="fas fa-globe-americas"></i> <sidebar_link_title class="sidebar_link_title"> mundos </sidebar_link_title>  </li></a>
+      <a href="../items.html" ><li ><i class="fas fa-cube"></i> <sidebar_link_title class="sidebar_link_title"> items </sidebar_link_title>  </li></a>
+      <a href="../hechizos.html" ><li > <i class="fas fa-magic"></i> <sidebar_link_title class="sidebar_link_title"> hechizos </sidebar_link_title>  </li></a>
+      <a href="../leyendas.html" ><li > <i class="fas fa-atlas"></i> <sidebar_link_title class="sidebar_link_title"> leyendas </sidebar_link_title>  </li></a>
+    </ul  >
+    <!-- <i class="fas fa-angle-left"></i> -->
+    <sidebar_footer>   
+       <!-- <button id="open_nav" ><i   onclick="openNav()" class="fas fa-angle-right"></i></button>
+      <button onclick="closeNav()" id="close_nav"><i class="fas fa-angle-left"></i></button>  -->
+
+     <i   id="open_nav" onclick="openNav()" class="fas fa-angle-right"></i>
+     <i  id="close_nav" onclick="closeNav()" class="fas fa-angle-left"></i>
+    </sidebar_footer>
+
+  </sidebar>
+  <main id="main">    
+   
+    <contenido> 
+
+      <h1> Leon de Arena </h1>
+      <img src="../img/leon_arena.jpg" >
+      </hr>
+      <p> el leon de el tiempo es criatura celestial creada por los angeles, su trabajo es proteger el flujo del tiempo y evitar que los mortales cambien la historia. </p>
+      <h3> batalla contra la serpiente negra </h3>
+      <p> durante la batalla contra la serpiente negra el leon de el tiempo ayudo a sus amos a capturarla.</p>
+      <h3> despues de los angeles </h3>
+      <p>cuando los angeles dejaron de existir el leon tomo como tarea proteger la prision de kasedrim, eventualmente varios seres primigenios encontraron su camino hacia mortis atraidos por el poder de el leon, el leon de el tiempo les permitio quedarse con el y eventualmentese convirtieron en monjes del tiempo al servicio de el leon. </p>
+      <img src="../img/leon_arena_gallery_1.jpg" >
+      <img src="../img/leon_arena_gallery_2.jpg" >
+    
+      </contenido>
+
+  </main>
 </body>   
+<script>
+
+function openmobileNav() {
+  // document.getElementById("mobile_sidebar").style.transition = "all 0s ease 0s";
+  document.getElementById("mobile_sidebar").style.height = "auto";
+  document.getElementById("open_mobile_nav").style.display = "none";
+   document.getElementById("close_mobile_nav").style.display = "inherit";
+  }
+
+  function closemobileNav() {
+  // document.getElementById("mobile_sidebar").style.transition = "all 0s ease 0s";
+  document.getElementById("mobile_sidebar").style.height = "0px";
+  document.getElementById("open_mobile_nav").style.display = "inherit";
+   document.getElementById("close_mobile_nav").style.display = "none";
+  }
+</script>
+<script src="../sidebar_toogle.js"></script>
 </html>
