--- a/v4_html_con_menus_javascript/linea_de_tiempo.html
+++ b/v4_html_con_menus_javascript/linea_de_tiempo.html
@@ -7,12 +7,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>    <!-- --- Jquery --- --> 
   <title></title>
   <link rel="stylesheet" href="style.css"> 
-  <link rel="stylesheet" href="sidebar.css"> 
+  <link rel="stylesheet" href="css/sidebar.css"> 
  <style>
  #linea_de_tiempo_link li{background-color: #335faf!important; color: #ffffff!important;  display: block;}
  #mobile_linea_de_tiempo_link li{background-color: #335faf!important; color: #ffffff!important;  display: block;}
 </style> 
-<script src="menu_links.js"></script> 
+<script src="js/menu_links.js"></script> 
 </head>
 <body>
   <mobile_navbar  > 
@@ -126,12 +126,12 @@
 </body>   
 <script> 
   $(function(){
-    $("#included_sidebar").load("sidebar.html");
-    $("#included_mobile_sidebar").load("mobile_sidebar.html");
+    $("#included_sidebar").load("partial/sidebar.html");
+    $("#included_mobile_sidebar").load("partial/mobile_sidebar.html");
     // $("#included_main").load("inc/main.html");
   });
   </script> 
-  <script src="ruta_absoluta.js"></script>
-<script src="mobile_sidebar_toogle.js"></script> 
-<script src="sidebar_toogle.js"></script> 
+  <script src="js/ruta_absoluta.js"></script>
+<script src="js/mobile_sidebar_toogle.js"></script> 
+<script src="js/sidebar_toogle.js"></script> 
 </html>
