--- a/v4_html_con_menus_javascript/hechizos.html
+++ b/v4_html_con_menus_javascript/hechizos.html
@@ -32,7 +32,7 @@
   <main id="main"> 
 
    <second_sidebar> hola </second_sidebar>
-   <div style="width: -webkit-fill-available;">
+   <div style="width: -webkit-fill-available;width: 100vw;">
       <banner>
         <banner_content>    
            <h1 style=" margin-top: 0px;">Hechizos</h1>
