--- a/v4_html_con_menus_javascript/linea_de_tiempo.html
+++ b/v4_html_con_menus_javascript/linea_de_tiempo.html
@@ -36,7 +36,7 @@
       <!-- -------------- linea de tiempo   ---------------------- -->
       <!-- ------------------------------------------------ -->
       <second_sidebar> hola </second_sidebar>
-      <div style="width: -webkit-fill-available;">
+      <div style="width: -webkit-fill-available;width: 100vw;">
          <banner>
            <banner_content>    
               <h1 style=" margin-top: 0px;">Linea de tiempo</h1>
